--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,9 @@
 body {
 	background-color: black;
-    margin: 50px 50px 0px 50px;
+    margin: 0px 50px;
+}
+h1, h2, h3, h4, h5, h6, p {
+    color: white;
 }
 .centered {
     text-align: center;
@@ -13,69 +16,176 @@ body {
   float: none;
   display: inline-block;
 }
+/*1 BLOCK*/
 #golovna {
     padding-top: 55px;
-    background: url(../img/photo_4.jpg) no-repeat center;
-    height: 500px;
+    background: url(../img/photo_1.1.jpg) no-repeat;
+    min-height: 644px;
+    background-size: cover;
+}
+.btn.button-one, .btn.button-two {
+    font-size: 1em;
+    padding-right: 10%;
+    padding-left: 10%;
+    margin: 2%;
+    border-radius: 0px;
+    background-color: rgba(255, 255, 255, 0);
 }
 .btn.button-one {
-    height: 40px;
+    padding-top: 0px;
+    padding-bottom: 0px;
     color: orange;
-    border: 3px solid orange;
-    border-radius: 0px;
+    border: 4px solid orange;   
 }
 .btn.button-two {
-    height: 40px;
     color: greenyellow;
-    border: 3px solid greenyellow;
-    border-radius: 0px;
+    border: 4px solid greenyellow;
 }
-button>span {
-    padding-right: 10px;
-    font-size: 16px;
+.but-icon {
+    font-size: 2.4em;
+    padding-right: 0.5em;
 }
+.text-block1_1 h2 {
+    margin-top: -0.5em;
+    font-weight: bold;
+    font-size: 3em;
+}
+/*2 BLOCK*/
 #pro_tabir {
     padding-top: 55px;
-    background: url(../img/photo_5.jpg) no-repeat center;
-    background-color: blue;
-    height: 500px;
+    background: url(../img/photo_2.jpg) no-repeat;
+    min-height: 644px;
+    background-size: cover;
 }
-.text-block1 {
+.text-block2_1 {
     background: yellow;
-    height: 150px;
+    height: 100%;
 }
-.text-block2 h1, .text-block2 h4 {
-    color: white;
-}
-.text-block2 {
-    color: white;
+.text-block2_3 {
     background: blue;
-    height: 150px;
+    height: 100%;
 }
+.text-innerblock2_1 h1, .text-innerblock2_1 h4 {
+    color: black;
+}
+.text-innerblock2_1 h1, .text-block2_3 h1 {
+    font-size: 35px;
+}
+.text-innerblock2_1 h4, .text-block2_3 h4 {
+    font-size: 20px;
+}
+.text-block2_2 h3 {
+    margin-top: -0.5em;
+    font-weight: bold;
+}
+.text-block2_3 h1, .text-block2_3 h4 {
+    color: white;
+}
+table {
+    width: 100%;
+    color: orange;
+}
+.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
+    line-height: 1;
+    border-top: 0px;
+    border-bottom: 0px;
+    vertical-align:middle;
+}
+.table > thead > tr > th {
+    text-align: center;
+}
+table tr, table th, table td {
+    font-size: 15px;
+    text-align: center;
+    
+}
+table th {
+    font-size: 25px;
+}
+.table-backdown td {
+    padding: 0em;
+    margin: 0em;
+}
+.table tbody tr td {
+    padding: 0.8em;
+}
+.table tbody tr td:nth-child(2) {
+    border-bottom: 2px dashed orange;
+    border-radius: 50%;
+/*    padding: -10%;*/
+}
+.table tbody tr td span:nth-child(1) {
+    border: 2px solid orange;
+    border-radius: 100%;
+    padding: 5px 10px;
+}
+.table tbody tr td:last-child(2) {
+    border-bottom: 0px;
+}
+.text-block2_4 p {
+    margin-bottom: 20px;
+}
+.text-block2_4 p {color: orange;
+}
+/*3 BLOCK*/
+#vas_ochikuye {
+    padding-top: 25px;
+    background: url(../img/photo_3.jpg) no-repeat;
+    min-height: 644px;
+    background-size: cover;
+}
+.block-icon {
+    border: 4px solid orange;
+    padding: 2em;
+    margin: 0em 2em;
+}
+.block-icon img{
+    height: 10em;
+    padding-bottom: 2em;
+}
+.block3_1 {
+    padding-left: 2em;
+}
+.block3_1 p{
+    color: orange;
+    text-align: left;
+}
+
 #rozporyadok {
     padding-top: 55px;
-    background-color: darkgrey;
-    height: 500px;
+    background: url(../img/photo_2.jpg) no-repeat;
+    min-height: 644px;
+    background-size: cover;
 }
 #aktyvnosti {
-    padding-top: 40px;
-    background-color: green;
-    height: 500px;
+    padding-top: 55px;
+    background: url(../img/photo_4.jpg) no-repeat center;
+    min-height: 1000px;
 }
 #tsiny {
     padding-top: 55px;
-    background-color: blue;
-    height: 500px;
+    background: url(../img/photo_5.jpg) no-repeat center;
+    min-height: 1000px;
 }
+/*8 BLOCK*/
 #photo {
     padding-top: 55px;
-    background-color: green;
-    height: 500px;
+    background-color: #1b161a;
 }
+/*9 BLOCK*/
 #kontakty {
     padding-top: 55px;
-    background-color: darkgrey;
-    height: 500px;
+    background-color: #1b161a;
+    min-height: 1000px;
 }
+#kontakty h1 {
+    font-weight: 600;
+    font-size: 5em;
+}    
+#kontakty img {
+    width: 5em;
+    border: 1px solid white;
+}    
+
 
 
