--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 body {
 	background-color: black;
-    margin: 0px 50px;
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+  margin: 0px 50px;
+  min-width: 320px;
 }
 h1, h2, h3, h4, h5, h6, p {
     color: white;
@@ -8,6 +10,11 @@ h1, h2, h3, h4, h5, h6, p {
 
 ul li {
   list-style: none;
+}
+
+ul{
+  padding: 0px;
+  margin: 0px;
 }
 
 * {
@@ -258,17 +265,47 @@ table th {
     padding-top: 55px;
     background-color: #1b161a;
 }
+
 /*9 BLOCK*/
-/*#kontakty {
-    padding-top: 55px;
-    background-color: #1b161a;
+.contact__section{
+  background: url(../img/contact_background.png) no-repeat center;
+  opacity: 0.9;
 }
-#kontakty h1 {
-    font-weight: 600;
-    font-size: 5em;
+
+.contact__headind{
+  margin-bottom: 25px;
+  font-weight: bold;
+  letter-spacing: .3em;
+  font-size: 1.7em;
 }
-#kontakty img {
-    width: 5em;
-    border: 1px solid white;
-}    
-*/
+
+.contact_description{
+  margin-bottom: 25px;
+  letter-spacing: .1em; 
+}
+
+.contact__info-block{
+  margin-bottom: 25px;
+}
+
+ul.contact__list-phones li{
+  color: #fff;
+  border-right: 1px solid #fff;
+  padding-right: 30px;
+  letter-spacing: .2em; 
+}
+
+ul.contact__list-social li img{
+  width: 40px;
+}
+
+ul.contact__list-social li{
+  display: inline-block;
+  padding-right: 30px;
+}
+
+.contact__email{
+  margin-bottom: 50px;
+  font-size: 1.1em;
+  letter-spacing: .2em; 
+}
