--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
   background-color: black;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
-  margin: 0px 50px;
+  margin: 0px 0px;
   min-width: 320px;
 }
 .container {
@@ -38,21 +38,16 @@ ul{
 #golovna {
     padding-top: 55px;
     background: url(../img/photo_1.1.jpg) no-repeat;
-    min-height: 644px;
     background-size: cover;
+    min-height: 100%;
 }
-#golovna img {
-    max-width: 100%;
-    height: auto;
+.buttons {
+    padding: 5em 0;
 }
-.button-block {
-    margin-top: 1.3em;
+.img-block1_1 img {
+    width: 50%;
 }
 .btn.button-one, .btn.button-two {
-    font-size: 1em;
-    padding-right: 10%;
-    padding-left: 10%;
-    margin: 2%;
     border-radius: 0px;
     background-color: rgba(255, 255, 255, 0);
 }
@@ -60,40 +55,37 @@ ul{
     padding-top: 0px;
     padding-bottom: 0px;
     color: orange;
-    border: 4px solid orange;   
+    position: relative;
     display: flex;
     align-items: center;
-    border: 4px solid orange;
+    border: 2px solid #c69f1a;;
+}
+.btn.button-one  
+.but-icon {
+    font-size: 2.5em;
+    padding: 0em 0.5em 0em 0em;
 }
 .btn.button-two {
     color: greenyellow;
-    border: 4px solid greenyellow;
-}
-.but-icon {
-    font-size: 2.4em;
-    padding: 0.1em 0.5em 0.1em 0em;
-}
-.text-block1_1 h2 {
-    margin-top: -0.5em;
-    font-weight: bold;
-    font-size: 3em;
-}
+    border: 2px solid greenyellow;
+}   
 /*2 BLOCK*/
 #pro_tabir {
     padding-top: 55px;
     background: url(../img/photo_2.jpg) no-repeat;
     min-height: 644px;
     background-size: cover;
+    font-family: Sans;
 }
 .text-block2_1 {
-    background: yellow;
+    background: #fdcb32;
     height: 100%;
 }
 .text-block2_3 {
-    background: blue;
+    background: #fdcb32;
     height: 100%;
 }
-.text-innerblock2_1 h1, .text-innerblock2_1 h4 {
+.text-innerblock2_1 h1, .text-innerblock2_1 h4, .text-block2_3 h1, .text-block2_3 h4 {
     color: black;
 }
 .text-innerblock2_1 h1, .text-block2_3 h1 {
@@ -101,12 +93,6 @@ ul{
 }
 .text-innerblock2_1 h4, .text-block2_3 h4 {
     font-size: 20px;
-}
-.text-block2_2 h3 {
-
-}
-.text-block2_3 h1, .text-block2_3 h4 {
-    color: white;
 }
 table {
     width: 100%;
@@ -157,7 +143,8 @@ table th {
 .text-block2_4 p {
     margin-bottom: 20px;
 }
-.text-block2_4 p {color: orange;
+.text-block2_4 p {
+    color: orange;
 }
 /*3 BLOCK*/
 #vas_ochikuye {
@@ -165,6 +152,7 @@ table th {
     background: url(../img/photo_3.jpg) no-repeat;
     min-height: 644px;
     background-size: cover;
+    font-family: Sans;
 }
 .block-icon {
     border: 4px solid orange;
