--- a/css/main.css
+++ b/css/main.css
@@ -506,9 +506,9 @@ table th {
 
 /*Modal window start*/
 
-#modal_form {
+#modal_form, #email_modal {
   width: 500px; 
-  height: 300px;
+  height: 320px;
   border-radius: 5px;
   border: 1px #fdcb32 solid;
   background: #202020;
@@ -523,7 +523,7 @@ table th {
   padding: 20px 10px;
 }
 
-#modal_form #modal_close {
+#modal_form #modal_close, #email_modal #modal_close {
   color: #fff;
   width: 21px;
   height: 21px;
@@ -570,6 +570,24 @@ table th {
   font-weight: bold;
 }
 
+/*Modal Email*/
+
+.email__modal-text{
+  color: #fdcb32;
+}
+
+.email__submit{
+  background: transparent;
+  border: 1px solid #fdcb32;
+  color: #fff;
+  padding: 5px 15px;
+}
+
+.email__submit:hover {
+  padding: 7px 20px;
+}
+
+
 /*Modal window end*/
 
 .payment__description-three{
@@ -606,7 +624,7 @@ table th {
 
 /*list page styles*/
 .thing__list-block{
-  margin-top: 5%;
+  margin-top: 1%;
 }
 
 .thing__list-block > h1{
@@ -626,10 +644,20 @@ table th {
   color: #fff;
   border: 1px solid #fdcb32;
   padding: 5px 15px;
+  z-index: 2;
 }
 
 .list__back > a:hover {
   padding: 7px 20px;
+}
+
+.list__logo{
+  position: absolute;
+  height: 150px;
+  bottom: 50px;
+  right: 50px;
+  opacity: .6;
+  z-index: 1;
 }
 
 /*------Photo section------*/
