--- a/css/main.css
+++ b/css/main.css
@@ -63,11 +63,9 @@ ul{
     margin-bottom: 10px;
     padding-top: 0px;
     padding-bottom: 0px;
-    color: orange;
+    color: gold;
     position: relative;
-/*    display: flex;
-    align-items: center;*/
-    border: 2px solid #c69f1a;;
+    border: 3px solid #c69f1a;;
 }
 .btn.button-one  
 .but-icon {
@@ -78,12 +76,12 @@ ul{
 }
 .btn.button-two {
     color: greenyellow;
-    border: 2px solid greenyellow;
+    border: 3px solid greenyellow;
 }   
 /*2 BLOCK*/
 #pro_tabir {
     padding-top: 55px;
-    background: url(../img/photo_2.jpg) no-repeat;
+    background: url(../img/Fon_9.jpg) no-repeat;
     min-height: 644px;
     background-size: cover;
     font-family: Sans;
@@ -92,8 +90,14 @@ ul{
     background: #fdcb32;
     height: 100%;
 }
+.text-block2_2 small {
+    color: white;
+}
 .text-block2_2 img {
     margin-top: 20px;
+}
+.text-block2_2 h3 {
+    padding-top: 0px;
 }
 .text-block2_3 {
     background: #fdcb32;
@@ -103,14 +107,14 @@ ul{
     color: black;
 }
 .text-innerblock2_1 h1, .text-block2_3 h1 {
-    font-size: 35px;
+    font-size: 30px;
 }
 .text-innerblock2_1 h4, .text-block2_3 h4 {
-    font-size: 20px;
+    font-size: 17px;
 }
 table {
     width: 100%;
-    color: orange;
+    color: gold;
 }
 .table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
     line-height: 1;
@@ -119,19 +123,23 @@ table {
     vertical-align:middle;
 }
 .table > thead > tr > th {
+    font-size: 20px;
     text-align: center;
     color: white;
 }
 table tr, table th, table td {
-    font-size: 15px;
+    /*font-size: 35px;*/
     text-align: center;
 
 }
 table th {
     font-size: 18px;
 }
+table th small {
+    font-size: 80%;
+}
 table tr, table th, table td {
-    font-size: inherit;
+    font-size: ;
 }    
 .table-backdown td {
     padding: 0em;
@@ -141,12 +149,12 @@ table tr, table th, table td {
     padding: 0.8em;
 }
 .table tbody tr td:nth-child(2) {
-    border-bottom: 2px dashed orange;
+    border-bottom: 2px dashed gold;
     border-radius: 50%;
 /*    padding: -10%;*/
 }
 .table tbody tr td span:nth-child(1) {
-    border: 2px solid orange;
+    border: 2px solid gold;
     border-radius: 100%;
     padding: 5px 10px;
 }
@@ -154,25 +162,25 @@ table tr, table th, table td {
     border-bottom: 0px;
 }
 .table tbody tr td strong {
-    border: 2px solid orange;
+    border: 2px solid gold;
     padding: 0.2em;
 }
 .text-block2_4 p {
     margin-bottom: 20px;
 }
 .text-block2_4 p {
-    color: orange;
+    color: gold;
 }
 /*3 BLOCK*/
 #vas_ochikuye {
     padding-top: 25px;
-    background: url(../img/photo_3.jpg) no-repeat;
+    background: url(../img/Fon_3.jpg) no-repeat;
     min-height: 644px;
     background-size: cover;
     font-family: Sans;
 }
 .block-icon {
-    border: 4px solid orange;
+    border: 4px solid gold;
     padding: 2em;
     margin: 0em 2em;
 }
@@ -184,14 +192,14 @@ table tr, table th, table td {
     padding-left: 2em;
 }
 .block3_1 p{
-    color: orange;
+    color: gold;
     text-align: left;
 }
-/*@media (max-width: 767px) {
+@media (max-width: 767px) {
   .block3_1 p{
     text-align: center;
   }
- } */
+ } 
 #rozporyadok {
     padding-top: 55px;
     min-height: 644px;
