Edit button icon

--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,7 @@ a.anchor:before{
 }
 .promo {
     position: relative;
-    bottom: 0.57em;
+    bottom: 0.1em;
 }
 .btn.button-one, .btn.button-two {
     border-radius: 0px;
@@ -82,9 +82,9 @@ a.anchor:before{
     border: 3px solid #c69f1a;;
 }
 .btn.button-one  
-.but-icon {
-    font-size: 2.15em;
-    padding: 0em 0.3em 0em 0em;
+i {
+    font-size: 2em;
+    padding: 0em 0.3em 0.2em 0em;
     position: relative;
     top: 0.07em;
 }
