--- a/css/main.css
+++ b/css/main.css
@@ -234,7 +234,7 @@ table {
 #rozporyadok {
     padding-top: 55px;
     min-height: 644px;
-		background: url(../img/photo_4.jpg) no-repeat center;
+		background: url(../img/Fon_4.jpg) no-repeat center;
 		background-size: cover;
 		color: white;
 		font-size: 18px;
