--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+html{
+  overflow-x: hidden; /*for deleting horizontal scroll*/
+}
+
 body {
   background-color: black;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
@@ -63,13 +67,24 @@ ul{
     background-color: rgba(255, 255, 255, 0);
 }
 .btn.button-one {
-    margin-bottom: 10px;
+/*    margin-bottom: 10px;*/
     padding-top: 0px;
     padding-bottom: 0px;
     color: gold;
     position: relative;
-    border: 3px solid #c69f1a;;
+    border: 3px solid #c69f1a;
+    transition: background 0.9s ease;
 }
+
+.button-one:hover{
+  display: inline-block;
+  border: none;
+  background: #fdcb32;
+  color: #fff;
+  padding: 3px 19px;
+}
+
+
 .btn.button-one  
 .but-icon {
     font-size: 2.15em;
@@ -77,10 +92,18 @@ ul{
     position: relative;
     top: 0.07em;
 }
+
 .btn.button-two {
     color: greenyellow;
     border: 3px solid greenyellow;
-}   
+    transition: background 0.9s ease;
+}
+
+.button-two:hover{
+  background: greenyellow;
+  color: #fff;
+} 
+
 /*2 BLOCK*/
 #pro_tabir {
     padding-top: 55px;
@@ -413,11 +436,6 @@ table tr, table th, table td {
 
 .reg__background.two {
   top: 27px;
-  left: 10px;
-}
-
-.reg__background.two {
-  top: 27px;
   left: -20px;
   color: transparent;
   -webkit-text-stroke: 1px #fdcb32;
@@ -451,16 +469,16 @@ table tr, table th, table td {
 
 .reg__heading{
   position: relative;
-  margin-bottom: 2%;
+  margin-bottom: 0px;
   font-weight: bold;
   letter-spacing: .25em;
-  font-size: 3.5em;
+  font-size: 5em;
   z-index: 2;
 }
 
 .reg__heading.bordered{
-  top: -70px;
-  left: 3px;
+  top: -94px;
+  left: 7px;
   color: transparent;
   -webkit-text-stroke: 1px #fdcb32;
   z-index: 0;
@@ -468,6 +486,10 @@ table tr, table th, table td {
 
 .reg__column-heading{
   margin-bottom: -6em;
+}
+
+.reg-discount__wrapper{
+  margin-bottom: 1.1em;
 }
 
 .reg__discount{
@@ -481,6 +503,11 @@ table tr, table th, table td {
   font-size: 6em;
 }
 
+.steps-block__wrapper{
+  margin-bottom: 20px;
+  margin-right: 10px;
+}
+
 .step__description{
   display: inline-block;
   color: #fdcb32;
@@ -492,22 +519,34 @@ table tr, table th, table td {
 }
 
 .reg__button{
-  height: 25px;
   background-color: Transparent;
   background-repeat:no-repeat;
   border: 1px solid #fdcb32;
-  cursor:pointer;
+  cursor: pointer;
   overflow: hidden;
   outline:none;
   height: 30px;
+  transition: all 0.9s ease;
+  padding: 0px;
+}
+
+.reg__button.button_hover:hover{
+  border: none;
+  background-color: #fdcb32;
+}
+
+.reg__button.button_hover a:hover {
+  color: #202020;
 }
 
 .reg__button a{
+  display: block;
+  padding: 15px 20px;
+  margin: -15px;
   text-decoration: none;
   color: #fdcb32;
   letter-spacing: 0.1em;
   font-size: 1.2em;
-  padding: 0px 5px;
 }
 
 .reg__arrow{
@@ -534,14 +573,14 @@ table tr, table th, table td {
 
 #modal_form, #email_modal {
   width: 500px;
-  height: 320px;
+  height: 250px;
   border-radius: 5px;
   border: 1px #fdcb32 solid;
   background: #202020;
   position: fixed;
   top: 45%;
   left: 50%;
-  margin-top: -150px;
+  margin-top: -125px;
   margin-left: -250px;
   display: none;
   opacity: 0;
@@ -580,7 +619,7 @@ table tr, table th, table td {
   font-size: 40px;
   font-weight: bold;
   color: #fff;
-  margin-bottom: 25px;
+  margin-bottom: 5px;
 }
 
 .modal__description{
@@ -597,6 +636,12 @@ table tr, table th, table td {
 }
 
 /*Modal Email*/
+#email_modal{
+  height: 470px;
+  width: 400px;
+  margin-top: -230px;
+  margin-left: -200px;
+}
 
 .email__modal-text{
   color: #fdcb32;
@@ -613,7 +658,13 @@ table tr, table th, table td {
   padding: 7px 20px;
 }
 
+.pick-race__wrapper{
+  text-align: left;
+}
 
+.bold{
+  font-weight: bold;
+}
 /*Modal window end*/
 
 .payment__description-three{
@@ -630,6 +681,10 @@ table tr, table th, table td {
   letter-spacing: 1px;
 }
 
+.reg__thing-list_wrapper{
+  margin-bottom: 10px;
+}
+
 .reg__thing-list{
   color: #fdcb32;
   text-decoration: underline;
@@ -640,12 +695,19 @@ table tr, table th, table td {
 
 .reg__thing-list:hover, .reg__thing-list:visited{
   color: #fdcb32;
+  border: 1px solid #fdcb32;
+  text-decoration: none;
+  padding: 2px 5px;
 }
 
 .reg__additional-info{
   color: #fdcb32;
   font-size: 10px;
   margin-bottom: 2em;
+}
+
+.reg-fance-img{
+  margin-bottom: -40px;
 }
 
 /*list page styles*/
