--- a/css/main.css
+++ b/css/main.css
@@ -47,13 +47,53 @@ ul{
   padding-top: 5px;
 }
 
-a.anchor:before{
+.main-navbar{
+  width: 100%;
+  padding-right: 165px;
+  padding-left: 165px;
+}
+
+/*test*/
+
+.phones__nav{
+  position: absolute;
+  right: 0px;
+  top: 50%;
+  margin-top: -20px;
+  width: 165px;
+}
+
+.phones__link{
+  display: block;
+}
+
+.phones__icon{
+  display: inline-block;
+  vertical-align: middle;
+  width: 15%;
+}
+
+.phones__icon i{
+  font-size: 25px;
+  color: #fdcb32;
+}
+
+.phones__text{
+  display: inline-block;
+  vertical-align: middle;
+  width: 80%;
+  color: #fdcb32;
+}
+
+
+/*a.anchor:before{
   display: block;
   content: " ";
   margin-top: -50px;
   height: 50px;
   visibility: hidden;
-}
+}*/
+
 .navbar-nav > li.second > a {
 color: gold
 }
@@ -515,20 +555,21 @@ table {
 .reg__background.one {
   top: -40px;
   left: 280px;
-  letter-spacing: 20px;
+  letter-spacing: 30px;
 }
 
 .reg__background.two {
-  top: 27px;
+  top: 60px;
   left: -20px;
   color: transparent;
   -webkit-text-stroke: 1px #fdcb32;
   opacity: .07;
   clip: rect(0px,1000px,200px,35px);
+  letter-spacing: 30px;
 }
 
 .reg__background.three {
-  top: 150px;
+  top: 160px;
   left: -19px;
   letter-spacing: 15px;
   font-size: 130px;
@@ -572,15 +613,6 @@ table {
   margin-bottom: -6em;
 }
 
-.reg-discount__wrapper{
-  margin-bottom: 1.1em;
-}
-
-.reg__discount{
-  font-weight: bold;
-  letter-spacing: 1px;
-}
-
 .step__number{
   color: #fff;
 /*  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;*/
@@ -614,6 +646,20 @@ table {
   padding: 0px;
 }
 
+@keyframes rainbow {
+  0% {
+    background: #fdcb32;
+  }
+
+  100% {
+    background: transparent;
+  }
+}
+
+#go_email{
+  animation: rainbow 2s linear 2s infinite;
+}
+
 .reg__button.button_hover:hover{
   border: none;
   background-color: #fdcb32;
@@ -637,6 +683,28 @@ table {
   height: 170px;
 }
 
+.reg__section_white-line{
+  border-bottom: 3px solid #fff;
+  margin-bottom: 25px;
+}
+
+.reg-fance-img{
+  margin-bottom: 10px;
+}
+
+.reg-discount__wrapper{
+  margin-bottom: 5px;
+}
+
+.reg__discount{
+  letter-spacing: 1px;
+  font-size: 22px;
+}
+
+.reg__discount > span{
+  font-weight: bold;
+}
+
 .payment__description-two{
   font-size: 12px;
   color: #fdcb32;
@@ -657,14 +725,14 @@ table {
 
 #modal_form, #email_modal {
   width: 500px;
-  height: 250px;
+  height: 300px;
   border-radius: 5px;
   border: 1px #fdcb32 solid;
   background: #202020;
   position: fixed;
   top: 45%;
   left: 50%;
-  margin-top: -125px;
+  margin-top: -150px;
   margin-left: -250px;
   display: none;
   opacity: 0;
@@ -721,7 +789,7 @@ table {
 
 /*Modal Email*/
 #email_modal{
-  height: 470px;
+  height: 450px;
   width: 400px;
   margin-top: -230px;
   margin-left: -200px;
@@ -788,10 +856,6 @@ table {
   color: #fdcb32;
   font-size: 10px;
   margin-bottom: 2em;
-}
-
-.reg-fance-img{
-  margin-bottom: -40px;
 }
 
 /*list page styles*/
